fix: correct chunk data serialization and loading
- Add proper type casting for YAML chunk deserialization
- Ensure consistent chunk data format across storage types
- Fix chunk loading from configuration